--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Jerin Peter</h1>
-        <p>Robotics | AI | Computer Vision</p>
+        <h1 class="fade-in">Jerin Peter</h1>
+        <p class="slide-up">Robotics | AI | Computer Vision</p>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -20,27 +20,23 @@
             </ul>
         </nav>
     </header>
-    <section id="about">
+    <section id="about" class="fade-in">
         <h2>About Me</h2>
         <p>MS in Robotics at UC Riverside. Passionate about AI, Computer Vision, and Autonomous Systems.</p>
-        <p>Skills: C++, Python, ROS, Embedded Systems, AI/ML.</p>
         <a href="https://www.linkedin.com/in/jerinpeter">LinkedIn</a> | <a href="https://github.com/jerinpeter">GitHub</a>
     </section>
-    <section id="projects">
+    <section id="projects" class="fade-in">
         <h2>Projects</h2>
-        <ul>
-            <li>Multimodal Calibration Dataset for Camera-LiDAR Systems</li>
-            <li>Plate Cleaning Robot using ABB IRB 120</li>
-            <li>Autonomous Indoor Delivery Robot</li>
-            <li>All Terrain Medical Security Rover</li>
-        </ul>
+        <div class="project">
+            <img src="project1.jpg" alt="Project 1" class="hover-zoom">
+            <p>Multimodal Calibration Dataset for Camera-LiDAR Systems</p>
+        </div>
+        <div class="project">
+            <img src="project2.jpg" alt="Project 2" class="hover-zoom">
+            <p>Autonomous Indoor Delivery Robot</p>
+        </div>
     </section>
-    <section id="publications">
-        <h2>Publications & Awards</h2>
-        <p>Best Paper Award - IEEE AIC 2022</p>
-        <p>Development of a Low-Cost Multipurpose Autonomous Navigation Robot</p>
-    </section>
-    <section id="contact">
+    <section id="contact" class="fade-in">
         <h2>Contact</h2>
         <p>Email: jerinpeter@gmail.com</p>
     </section>
