--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
           <h3>Autonomous Indoor Delivery Robot</h3>
           <p>Built an autonomous delivery robot using ROS, TEB planner, and sensor fusion for high-accuracy localization.</p>
         </div>
+        <div class="project-card">
+          <h3>Autonomous Docking System</h3>
+          <p>Engineered an autonomous docking robot using computer vision and Aruco markers for precise alignment.</p>
+        </div>
+        <div class="project-card">
+          <h3>4WD Outdoor Navigation Robot</h3>
+          <p>Developed a 4-wheel drive robot with 3D camera for real-time appearance-based mapping and navigation.</p>
+        </div>
+        <div class="project-card">
+          <h3>All-Terrain Medical Security Rover</h3>
+          <p>Designed a modular rover for disaster management with adaptive height/width adjustments and toxic gas detection.</p>
+        </div>
       </div>
     </div>
   </section>
@@ -88,6 +100,10 @@
           <h3>Asimov Robotics</h3>
           <p>Software Intern - ROS Developer</p>
         </div>
+        <div class="experience-item">
+          <h3>THIAN</h3>
+          <p>Research Assistant & Community Development</p>
+        </div>
       </div>
     </div>
   </section>
@@ -99,6 +115,7 @@
       <ul>
         <li>Development of a Low-Cost Multipurpose Autonomous Navigation Robot - IEEE AIC 2022</li>
         <li>Development of an Autonomous Ground Robot Using RTAB Algorithm - AIR 2023</li>
+        <li>Development of an Intuitive Autonomous Ground Robot for Indoor Delivery Applications - IPDIMS 2024</li>
       </ul>
     </div>
   </section>
