--- a/index.html
+++ b/index.html
@@ -60,30 +60,22 @@
       <h2>Projects</h2>
       <div class="project-grid">
         <div class="project-card">
+          <img src="assets/images/project1.jpg" alt="Multimodal Calibration Dataset">
           <h3>Multimodal Calibration Dataset</h3>
           <p>Designed a pipeline for collecting multimodal calibration datasets using robotic arms and motion capture systems.</p>
         </div>
         <div class="project-card">
+          <img src="assets/images/project2.jpg" alt="Plate Cleaning Robot">
           <h3>Plate Cleaning Robot</h3>
           <p>Developed an automated plate-cleaning system using ABB IRB 120 robotic arm with precise trajectory planning.</p>
         </div>
         <div class="project-card">
+          <img src="assets/images/project3.jpg" alt="Autonomous Indoor Delivery Robot">
           <h3>Autonomous Indoor Delivery Robot</h3>
           <p>Built an autonomous delivery robot using ROS, TEB planner, and sensor fusion for high-accuracy localization.</p>
         </div>
-        <div class="project-card">
-          <h3>Autonomous Docking System</h3>
-          <p>Engineered an autonomous docking robot using computer vision and Aruco markers for precise alignment.</p>
-        </div>
-        <div class="project-card">
-          <h3>4WD Outdoor Navigation Robot</h3>
-          <p>Developed a 4-wheel drive robot with 3D camera for real-time appearance-based mapping and navigation.</p>
-        </div>
-        <div class="project-card">
-          <h3>All-Terrain Medical Security Rover</h3>
-          <p>Designed a modular rover for disaster management with adaptive height/width adjustments and toxic gas detection.</p>
-        </div>
       </div>
+      <a href="projects.html" class="more-button">More Projects</a>
     </div>
   </section>
 
@@ -91,18 +83,27 @@
   <section id="experience" class="experience-section">
     <div class="container">
       <h2>Experience</h2>
-      <div class="experience-list">
-        <div class="experience-item">
-          <h3>ITP Palakkad Technology IHub Foundation</h3>
-          <p>Project Engineer - Mobile Robotics</p>
+      <div class="timeline">
+        <div class="timeline-item left">
+          <div class="timeline-content">
+            <h3>ITP Palakkad Technology IHub Foundation</h3>
+            <p>Project Engineer - Mobile Robotics</p>
+            <p>Aug 2022 - Present</p>
+          </div>
         </div>
-        <div class="experience-item">
-          <h3>Asimov Robotics</h3>
-          <p>Software Intern - ROS Developer</p>
+        <div class="timeline-item right">
+          <div class="timeline-content">
+            <h3>Asimov Robotics</h3>
+            <p>Software Intern - ROS Developer</p>
+            <p>Aug 2022 - Jun 2023</p>
+          </div>
         </div>
-        <div class="experience-item">
-          <h3>THIAN</h3>
-          <p>Research Assistant & Community Development</p>
+        <div class="timeline-item left">
+          <div class="timeline-content">
+            <h3>THIAN</h3>
+            <p>Research Assistant & Community Development</p>
+            <p>Aug 2021 - Oct 2021</p>
+          </div>
         </div>
       </div>
     </div>
