home screen images update

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a href="#home" class="logo">Jerin Peter</a>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
+        <li><a href="#education">Education</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#publications">Publications</a></li>
@@ -24,7 +25,7 @@
   </nav>
 
   <!-- Home Section -->
-  <section id="home" class="home-section">
+  <!-- <section id="home" class="home-section">
     <div class="container">
       <h1 class="animated-text">Hi, I'm Jerin Peter</h1>
       <p class="animated-text">Robotics Engineer | Control & Navigation Specialist</p>
@@ -34,7 +35,22 @@
         <a href="mailto:jerinpeter@gmail.com"><i class="fas fa-envelope"></i></a>
       </div>
     </div>
-  </section>
+  </section> -->
+
+  <!-- Home Section -->
+<section id="home" class="home-section">
+  <div class="background-slideshow"></div>
+  <div class="container">
+    <h1 class="animated-text">Hi, I'm Jerin Peter</h1>
+    <p class="animated-text">Robotics Engineer | Control & Navigation Specialist</p>
+    <div class="social-links animated-text">
+      <a href="https://linkedin.com/in/jerinpeter" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/jerinpeter" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="mailto:jerinpeter@gmail.com"><i class="fas fa-envelope"></i></a>
+    </div>
+  </div>
+</section>
+
 
   <!-- About Section -->
   <section id="about" class="about-section">
@@ -50,6 +66,33 @@
           <li>ROS1 & ROS2, Git, Docker</li>
           <li>Linux, FreeRTOS, Windows</li>
         </ul>
+      </div>
+    </div>
+  </section>
+
+  <!-- Education Section -->
+  <section id="education" class="education-section">
+    <div class="container">
+      <h2>Education</h2>
+      <div class="education-list">
+        <div class="education-item">
+          <h3>University of California, Riverside</h3>
+          <p>MS in Robotics with focus on control & navigation</p>
+          <p>CGPA: 4.0</p>
+          <p>Courses: Programming Practical Robots, Kinematics & Dynamics of Robots, Reinforcement Learning, Optimal Control & Estimation, Computational Methods for Robotics, Fundamentals of Machine Learning, Foundations of Robotics</p>
+        </div>
+        <div class="education-item">
+          <h3>Rajagiri School of Engineering & Technology</h3>
+          <p>Undergraduate in Electronics & Communication Engineering</p>
+          <p>CGPA: 3.26</p>
+          <p>Courses: Robotics and Industrial Automation, Machine Learning, Real Time Operating Systems, Control Systems, Digital Signal Processing</p>
+        </div>
+        <div class="education-item">
+          <h3>Cochin Refineries School</h3>
+          <p>High School (12th Grade) with Major in Computer Science</p>
+          <p>CGPA: 3.5</p>
+          <p>Courses: Computer Science (C++, SQL), Mathematics, Physics, Chemistry</p>
+        </div>
       </div>
     </div>
   </section>
@@ -86,23 +129,39 @@
       <div class="timeline">
         <div class="timeline-item left">
           <div class="timeline-content">
+            <img src="assets/images/iptif.png" alt="ITP Palakkad Technology IHub Foundation">
             <h3>ITP Palakkad Technology IHub Foundation</h3>
             <p>Project Engineer - Mobile Robotics</p>
             <p>Aug 2022 - Present</p>
+            <ul>
+              <li>Studied forward/inverse kinematics and dynamics of wheeled mobile robots.</li>
+              <li>Implemented PID control for a Holonomic mobile robot.</li>
+              <li>Developed an autonomous outdoor navigation robot using RTK GPS and sensor fusion.</li>
+            </ul>
           </div>
         </div>
         <div class="timeline-item right">
           <div class="timeline-content">
+            <img src="assets/images/asimov.jpeg" alt="Asimov Robotics">
             <h3>Asimov Robotics</h3>
             <p>Software Intern - ROS Developer</p>
             <p>Aug 2022 - Jun 2023</p>
+            <ul>
+              <li>Updated the software stack from Ubuntu 16.04 to Ubuntu 20.04 and ROS Noetic.</li>
+              <li>Implemented differential drive and odometry calculation for robot pose estimation.</li>
+            </ul>
           </div>
         </div>
         <div class="timeline-item left">
           <div class="timeline-content">
+            <img src="assets/images/tihan.png" alt="THIAN">
             <h3>THIAN</h3>
             <p>Research Assistant & Community Development</p>
             <p>Aug 2021 - Oct 2021</p>
+            <ul>
+              <li>Implemented sensor fusion for accurate odometry computation.</li>
+              <li>Organized workshops on ROS and agricultural drones.</li>
+            </ul>
           </div>
         </div>
       </div>
