project sample update

--- a/index.html
+++ b/index.html
@@ -24,18 +24,6 @@
     </div>
   </nav>
 
-  <!-- Home Section -->
-  <!-- <section id="home" class="home-section">
-    <div class="container">
-      <h1 class="animated-text">Hi, I'm Jerin Peter</h1>
-      <p class="animated-text">Robotics Engineer | Control & Navigation Specialist</p>
-      <div class="social-links animated-text">
-        <a href="https://linkedin.com/in/jerinpeter" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/jerinpeter" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="mailto:jerinpeter@gmail.com"><i class="fas fa-envelope"></i></a>
-      </div>
-    </div>
-  </section> -->
 
   <!-- Home Section -->
 <section id="home" class="home-section">
@@ -76,19 +64,28 @@
       <h2>Education</h2>
       <div class="education-list">
         <div class="education-item">
-          <h3>University of California, Riverside</h3>
+          <div class="education-header">
+            <h3>University of California, Riverside</h3>
+            <img src="assets/images/education/ucr.png" alt="University of California, Riverside Logo">
+          </div>
           <p>MS in Robotics with focus on control & navigation</p>
           <p>CGPA: 4.0</p>
           <p>Courses: Programming Practical Robots, Kinematics & Dynamics of Robots, Reinforcement Learning, Optimal Control & Estimation, Computational Methods for Robotics, Fundamentals of Machine Learning, Foundations of Robotics</p>
         </div>
         <div class="education-item">
-          <h3>Rajagiri School of Engineering & Technology</h3>
+          <div class="education-header">
+            <h3>Rajagiri School of Engineering & Technology</h3>
+            <img src="assets/images/education/rset.jpeg" alt="Rajagiri School of Engineering & Technology Logo">
+          </div>
           <p>Undergraduate in Electronics & Communication Engineering</p>
           <p>CGPA: 3.26</p>
           <p>Courses: Robotics and Industrial Automation, Machine Learning, Real Time Operating Systems, Control Systems, Digital Signal Processing</p>
         </div>
         <div class="education-item">
-          <h3>Cochin Refineries School</h3>
+          <div class="education-header">
+            <h3>Cochin Refineries School</h3>
+            <img src="assets/images/education/crs.png" alt="Cochin Refineries School Logo">
+          </div>
           <p>High School (12th Grade) with Major in Computer Science</p>
           <p>CGPA: 3.5</p>
           <p>Courses: Computer Science (C++, SQL), Mathematics, Physics, Chemistry</p>
@@ -96,6 +93,7 @@
       </div>
     </div>
   </section>
+  
 
   <!-- Projects Section -->
   <section id="projects" class="projects-section">
@@ -103,17 +101,17 @@
       <h2>Projects</h2>
       <div class="project-grid">
         <div class="project-card">
-          <img src="assets/images/project1.jpg" alt="Multimodal Calibration Dataset">
+          <img src="assets/images/projects/multimodal.png" alt="Multimodal Calibration Dataset">
           <h3>Multimodal Calibration Dataset</h3>
           <p>Designed a pipeline for collecting multimodal calibration datasets using robotic arms and motion capture systems.</p>
         </div>
         <div class="project-card">
-          <img src="assets/images/project2.jpg" alt="Plate Cleaning Robot">
+          <img src="assets/images/projects/arm.gif" alt="Plate Cleaning Robot">
           <h3>Plate Cleaning Robot</h3>
           <p>Developed an automated plate-cleaning system using ABB IRB 120 robotic arm with precise trajectory planning.</p>
         </div>
         <div class="project-card">
-          <img src="assets/images/project3.jpg" alt="Autonomous Indoor Delivery Robot">
+          <img src="assets/images/projects/nova.jpg" alt="Autonomous Indoor Delivery Robot">
           <h3>Autonomous Indoor Delivery Robot</h3>
           <p>Built an autonomous delivery robot using ROS, TEB planner, and sensor fusion for high-accuracy localization.</p>
         </div>
@@ -129,7 +127,7 @@
       <div class="timeline">
         <div class="timeline-item left">
           <div class="timeline-content">
-            <img src="assets/images/iptif.png" alt="ITP Palakkad Technology IHub Foundation">
+            <img src="assets/images/companies/iptif.png" alt="ITP Palakkad Technology IHub Foundation">
             <h3>ITP Palakkad Technology IHub Foundation</h3>
             <p>Project Engineer - Mobile Robotics</p>
             <p>Aug 2022 - Present</p>
@@ -142,7 +140,7 @@
         </div>
         <div class="timeline-item right">
           <div class="timeline-content">
-            <img src="assets/images/asimov.jpeg" alt="Asimov Robotics">
+            <img src="assets/images/companies/asimov.jpeg" alt="Asimov Robotics">
             <h3>Asimov Robotics</h3>
             <p>Software Intern - ROS Developer</p>
             <p>Aug 2022 - Jun 2023</p>
@@ -154,7 +152,7 @@
         </div>
         <div class="timeline-item left">
           <div class="timeline-content">
-            <img src="assets/images/tihan.png" alt="THIAN">
+            <img src="assets/images/companies/tihan.png" alt="THIAN">
             <h3>THIAN</h3>
             <p>Research Assistant & Community Development</p>
             <p>Aug 2021 - Oct 2021</p>
