--- a/projects.html
+++ b/projects.html
@@ -114,7 +114,7 @@
       <div class="timeline">
         <div class="timeline-item left">
           <div class="timeline-content">
-            <img src="assets/images/iptif.png" alt="ITP Palakkad Technology IHub Foundation">
+            <img src="assets/images/companies/iptif.png" alt="ITP Palakkad Technology IHub Foundation">
             <h3>ITP Palakkad Technology IHub Foundation</h3>
             <p>Project Engineer - Mobile Robotics</p>
             <p>Aug 2022 - Present</p>
@@ -127,7 +127,7 @@
         </div>
         <div class="timeline-item right">
           <div class="timeline-content">
-            <img src="assets/images/asimov.jpeg" alt="Asimov Robotics">
+            <img src="assets/images/companies/asimov.jpeg" alt="Asimov Robotics">
             <h3>Asimov Robotics</h3>
             <p>Software Intern - ROS Developer</p>
             <p>Aug 2022 - Jun 2023</p>
@@ -139,7 +139,7 @@
         </div>
         <div class="timeline-item left">
           <div class="timeline-content">
-            <img src="assets/images/tihan.png" alt="THIAN">
+            <img src="assets/images/companies/tihan.png" alt="THIAN">
             <h3>THIAN</h3>
             <p>Research Assistant & Community Development</p>
             <p>Aug 2021 - Oct 2021</p>
