project page update

--- a/projects.html
+++ b/projects.html
@@ -45,28 +45,50 @@
         </div>
         <!-- Add more projects here -->
         <div class="project-card">
-          <img src="assets/images/project4.jpg" alt="Autonomous Docking System">
-          <h3>Autonomous Docking System</h3>
-          <p>Engineered an autonomous docking robot using computer vision and Aruco markers for precise alignment.</p>
-        </div>
-        <div class="project-card">
-          <img src="assets/images/project5.jpg" alt="4WD Outdoor Navigation Robot">
+          <img src="assets/images/projects/4wd.jpg" alt="4WD Outdoor Navigation Robot">
           <h3>4WD Outdoor Navigation Robot</h3>
           <p>Developed a 4-wheel drive robot with 3D camera for real-time appearance-based mapping and navigation.</p>
         </div>
         <div class="project-card">
-          <img src="assets/images/project6.jpg" alt="All-Terrain Medical Security Rover">
-          <h3>All-Terrain Medical Security Rover</h3>
+          <img src="assets/images/projects/psr.png" alt="All-Terrain Medical Security Rover">
+          <h3>All-Terrain Medical Security Phase Shifting Rover</h3>
           <p>Designed a modular rover for disaster management with adaptive height/width adjustments and toxic gas detection.</p>
         </div>
+
+        <div class="project-card">
+          <img src="assets/images/projects/mini.png" alt="Mini Indoor Navigation Robot">
+          <h3>Mini Indoor Autonomous Nav Bot</h3>
+          <p>A mini autonomous navigation in ROS based on the LinoRobot Repository.</p>
+        </div>
+        <div class="project-card">
+          <img src="assets/images/projects/mecanum.png" alt="Mecanum Wheel based Robot">
+          <h3>Holonomic Autonomous Navigation Mobile Robot</h3>
+          <p>A Holonomic autonomous navigation implementation with sampling based trajectory planner and PID control in the firware level.</p>
+        </div>
+        <div class="project-card">
+          <img src="assets/images/projects/outdoor.png" alt="RTK GPS Outdoor Navigation Robot">
+          <h3>RTK GPS Based Outdoor Nav. Bot</h3>
+          <p>A Holonomic autonomous navigation implementation with sampling based trajectory planner and PID control in the firware level.</p>
+        </div>
+
+        <div class="project-card">
+          <img src="assets/images/projects/rl.png" alt="Autonomous Navigation of a Mecanum Robot Using DQN in ROS 2">
+          <h3>Autonomous Navigation of a Mecanum Robot Using DQN in ROS 2</h3>
+          <p>A Holonomic autonomous navigation implementation with sampling based trajectory planner and PID control in the firware level.</p>
+        </div>
+
+
       </div>
+      
     </div>
+
+    
   </section>
 
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2024 Jerin Peter. All rights reserved.</p>
+      <p>&copy; 2025 Jerin Peter. All rights reserved.</p>
     </div>
   </footer>
 </body>
