updated project page pics

--- a/projects.html
+++ b/projects.html
@@ -65,6 +65,13 @@
           <h3>Holonomic Autonomous Navigation Mobile Robot</h3>
           <p>A Holonomic autonomous navigation implementation with sampling based trajectory planner and PID control in the firware level.</p>
         </div>
+
+        <div class="project-card">
+          <img src="assets/images/projects/demo.gif" alt="Turtlesim based game in ROS">
+          <h3>Turtlesim based Game in ROS</h3>
+          <p>Spawn a turtle, Try moving it along the line.</p>
+        </div>
+
         <div class="project-card">
           <img src="assets/images/projects/outdoor.png" alt="RTK GPS Outdoor Navigation Robot">
           <h3>RTK GPS Based Outdoor Nav. Bot</h3>
@@ -76,6 +83,62 @@
           <h3>Autonomous Navigation of a Mecanum Robot Using DQN in ROS 2</h3>
           <p>A Holonomic autonomous navigation implementation with sampling based trajectory planner and PID control in the firware level.</p>
         </div>
+
+        <div class="project-card">
+          <img src="assets/images/projects/spidy.png" alt="4 legged Spider Robot">
+          <h3>Autonomous Navigation of a Mecanum Robot Using DQN in ROS 2</h3>
+          <p>A Holonomic autonomous navigation implementation with sampling based trajectory planner and PID control in the firware level.</p>
+        </div>
+
+        <div class="project-card">
+          <img src="assets/images/projects/Automatic Soap Dispenser.png" alt="Automatic Soap Dispenser">
+          <h3>Automatic Soap / Sanitizer Dispenser</h3>
+          <p>A Holonomic autonomous navigation implementation with sampling based trajectory planner and PID control in the firware level.</p>
+        </div>
+
+        <div class="project-card">
+          <img src="assets/images/projects/chatapp.gif" alt="ROS based chatapp">
+          <h3>Chat app using pub sub model with async spinner</h3>
+          <p> Implemented chat like nodes using async spinner in ROS </p>
+        </div>
+        <div class="project-card">
+          <img src="assets/images/projects/waterbot.png" alt="Water Body cleaning Robot">
+          <h3>Water Body Cleaning Robot</h3>
+          <p> Robot plan path clean and comeback.</p>
+        </div>
+        <div class="project-card">
+          <img src="assets/images/projects/drone.jpg" alt="Racing Drone based on QAV250">
+          <h3>Racing Drone with CC3D</h3>
+          <p> Robot plan path clean and comeback.</p>
+        </div>
+        <div class="project-card">
+          <img src="assets/images/projects/arm.png" alt="Robot arm">
+          <h3>Fully 3D printed Robot Arm</h3>
+          <p> Robot plan path clean and comeback.</p>
+        </div>
+        <div class="project-card">
+          <img src="assets/images/projects/biped.jpg" alt="Biped robot">
+          <h3>Fully 3D printed biped robot with voice control</h3>
+          <p> walking biped with obstacle avoidance, voice control and obstacle avoidance.</p>
+        </div>
+        <div class="project-card">
+          <img src="assets/images/projects/iot.jpg" alt="Home automation using IOT">
+          <h3>Home Automation using IOT</h3>
+          <p>NodeMCU based control of Sockets using IFTTT and Gassit.</p>
+        </div>
+
+        <div class="project-card">
+          <img src="assets/images/projects/lanefollowing.png" alt="Lane Following Robot">
+          <h3>Lane Following Robot</h3>
+          <p>Opencv based lane following .</p>
+        </div>
+
+        <div class="project-card">
+          <img src="assets/images/projects/dirtcar.png"alt="RC offroad car with drift control">
+          <h3>RC offroad car with drift control</h3>
+          <p>Opencv based lane following .</p>
+        </div>
+
 
 
       </div>
