updated home page writting

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="background-slideshow"></div>
   <div class="container">
     <h1 class="animated-text">Hi, I'm Jerin Peter</h1>
-    <p class="animated-text">Robotics Engineer | Control & Navigation Specialist</p>
+    <p class="animated-text">Robotics Engineer | Control & Navigation Specialist | ROS Developer | Maker</p>
     <div class="social-links animated-text">
       <a href="https://linkedin.com/in/jerinpeter" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://github.com/jerinpeter" target="_blank"><i class="fab fa-github"></i></a>
