projects to main page, blur effect

--- a/index.html
+++ b/index.html
@@ -100,25 +100,131 @@
     <div class="container">
       <h2>Projects</h2>
       <div class="project-grid">
+        <!-- Project 1 -->
         <div class="project-card">
           <img src="assets/images/projects/multimodal.png" alt="Multimodal Calibration Dataset">
           <h3>Multimodal Calibration Dataset</h3>
           <p>Designed a pipeline for collecting multimodal calibration datasets using robotic arms and motion capture systems.</p>
         </div>
+        <!-- Project 2 -->
         <div class="project-card">
           <img src="assets/images/projects/arm.gif" alt="Plate Cleaning Robot">
           <h3>Plate Cleaning Robot</h3>
           <p>Developed an automated plate-cleaning system using ABB IRB 120 robotic arm with precise trajectory planning.</p>
         </div>
+        <!-- Project 3 -->
         <div class="project-card">
           <img src="assets/images/projects/nova.jpg" alt="Autonomous Indoor Delivery Robot">
           <h3>Autonomous Indoor Delivery Robot</h3>
           <p>Built an autonomous delivery robot using ROS, TEB planner, and sensor fusion for high-accuracy localization.</p>
         </div>
+        <!-- Project 4 -->
+        <div class="project-card">
+          <img src="assets/images/projects/4wd.jpg" alt="4WD Outdoor Navigation Robot">
+          <h3>4WD Outdoor Navigation Robot</h3>
+          <p>Developed a 4-wheel drive robot with 3D camera for real-time appearance-based mapping and navigation.</p>
+        </div>
+        <!-- Project 5 -->
+        <div class="project-card">
+          <img src="assets/images/projects/psr.png" alt="All-Terrain Medical Security Phase Shifting Rover">
+          <h3>All-Terrain Medical Security Phase Shifting Rover</h3>
+          <p>Designed a modular rover for disaster management with adaptive height/width adjustments and toxic gas detection.</p>
+        </div>
+        <!-- Project 6 -->
+        <div class="project-card">
+          <img src="assets/images/projects/mini.png" alt="Mini Indoor Autonomous Nav Bot">
+          <h3>Mini Indoor Autonomous Nav Bot</h3>
+          <p>A mini autonomous navigation robot based on the LinoRobot Repository.</p>
+        </div>
+        <!-- Project 7 -->
+        <div class="project-card">
+          <img src="assets/images/projects/mecanum.png" alt="Holonomic Autonomous Navigation Mobile Robot">
+          <h3>Holonomic Autonomous Navigation Mobile Robot</h3>
+          <p>An implementation with sampling-based trajectory planner and PID control.</p>
+        </div>
+        <!-- Project 8 -->
+        <div class="project-card">
+          <img src="assets/images/projects/demo.gif" alt="Turtlesim based Game in ROS">
+          <h3>Turtlesim based Game in ROS</h3>
+          <p>Spawn a turtle and try moving it along a line.</p>
+        </div>
+        <!-- Project 9 -->
+        <div class="project-card">
+          <img src="assets/images/projects/outdoor.png" alt="RTK GPS Based Outdoor Nav. Bot">
+          <h3>RTK GPS Based Outdoor Nav. Bot</h3>
+          <p>Autonomous navigation with sensor fusion and RTK GPS.</p>
+        </div>
+        <!-- Project 10 -->
+        <div class="project-card">
+          <img src="assets/images/projects/rl.png" alt="Autonomous Navigation of a Mecanum Robot Using DQN in ROS 2">
+          <h3>Autonomous Navigation of a Mecanum Robot Using DQN in ROS 2</h3>
+          <p>Holonomic navigation implementation with sampling-based trajectory planner and PID control.</p>
+        </div>
+        <!-- Project 11 -->
+        <div class="project-card">
+          <img src="assets/images/projects/spidy.png" alt="4 Legged Spider Robot">
+          <h3>4 Legged Spider Robot</h3>
+          <p>Holonomic navigation implementation with sampling-based trajectory planner and PID control.</p>
+        </div>
+        <!-- Project 12 -->
+        <div class="project-card">
+          <img src="assets/images/projects/Automatic Soap Dispenser.png" alt="Automatic Soap / Sanitizer Dispenser">
+          <h3>Automatic Soap / Sanitizer Dispenser</h3>
+          <p>Implementation with sampling-based trajectory planner and PID control.</p>
+        </div>
+        <!-- Project 13 -->
+        <div class="project-card">
+          <img src="assets/images/projects/chatapp.gif" alt="Chat App using pub sub model">
+          <h3>Chat App using pub sub model with async spinner</h3>
+          <p>Implemented chat-like nodes using async spinner in ROS.</p>
+        </div>
+        <!-- Project 14 -->
+        <div class="project-card">
+          <img src="assets/images/projects/waterbot.png" alt="Water Body Cleaning Robot">
+          <h3>Water Body Cleaning Robot</h3>
+          <p>Robot plans path to clean water bodies and returns.</p>
+        </div>
+        <!-- Project 15 -->
+        <div class="project-card">
+          <img src="assets/images/projects/drone.jpg" alt="Racing Drone with CC3D">
+          <h3>Racing Drone with CC3D</h3>
+          <p>Drone-based implementation with autonomous flight features.</p>
+        </div>
+        <!-- Project 16 -->
+        <div class="project-card">
+          <img src="assets/images/projects/arm.png" alt="Fully 3D printed Robot Arm">
+          <h3>Fully 3D printed Robot Arm</h3>
+          <p>Innovative 3D printed robotic arm with advanced control features.</p>
+        </div>
+        <!-- Project 17 -->
+        <div class="project-card">
+          <img src="assets/images/projects/biped.jpg" alt="Fully 3D printed biped robot with voice control">
+          <h3>Fully 3D printed biped robot with voice control</h3>
+          <p>Walking biped robot with obstacle avoidance and voice control.</p>
+        </div>
+        <!-- Project 18 -->
+        <div class="project-card">
+          <img src="assets/images/projects/iot.jpg" alt="Home Automation using IOT">
+          <h3>Home Automation using IOT</h3>
+          <p>NodeMCU based control of sockets using IFTTT and Gassit.</p>
+        </div>
+        <!-- Project 19 -->
+        <div class="project-card">
+          <img src="assets/images/projects/lanefollowing.png" alt="Lane Following Robot">
+          <h3>Lane Following Robot</h3>
+          <p>OpenCV based lane following algorithm implementation.</p>
+        </div>
+        <!-- Project 20 -->
+        <div class="project-card">
+          <img src="assets/images/projects/dirtcar.png" alt="RC offroad car with drift control">
+          <h3>RC offroad car with drift control</h3>
+          <p>OpenCV based lane following and drift control implementation.</p>
+        </div>
       </div>
-      <a href="projects.html" class="more-button">More Projects</a>
+      <button class="more-button" id="toggleProjects">More Projects</button>
     </div>
   </section>
+  
 
   <!-- Experience Section -->
   <section id="experience" class="experience-section">
