mobile screen blur fix

--- a/projects.html
+++ b/projects.html
@@ -139,6 +139,11 @@
           <p>Opencv based lane following .</p>
         </div>
 
+        <div class="project-card">
+          <img src="assets/images/projects/dirtcar.png"alt="RC offroad car with drift control">
+          <h3>RC offroad car with drift control</h3>
+          <p>Opencv based lane following .</p>
+        </div>
 
 
       </div>
