updated arm page!

--- a/index.html
+++ b/index.html
@@ -107,11 +107,14 @@
           <p>Designed a pipeline for collecting multimodal calibration datasets using robotic arms and motion capture systems.</p>
         </div>
         <!-- Project 2 -->
-        <div class="project-card">
-          <img src="assets/images/projects/arm.gif" alt="Plate Cleaning Robot">
-          <h3>Plate Cleaning Robot</h3>
-          <p>Developed an automated plate-cleaning system using ABB IRB 120 robotic arm with precise trajectory planning.</p>
-        </div>
+        <a href="plate_cleaning_arm.html" style="text-decoration: none; color: inherit;">
+          <div class="project-card">
+            <img src="assets/images/projects/arm.gif" alt="Plate Cleaning Robot">
+            <h3>Plate Cleaning Robot</h3>
+            <p>Developed an automated plate-cleaning system using ABB IRB 120 robotic arm with precise trajectory planning.</p>
+          </div>
+        </a>
+        
         <!-- Project 3 -->
         <div class="project-card">
           <img src="assets/images/projects/nova.jpg" alt="Autonomous Indoor Delivery Robot">
